<resources>
    <string name="app_name">Library</string>
    <string name="add_book">Добавить книгу</string>
    <string name="add_disk">Добавить диск</string>
    <string name="add_newspaper">Добавить газету</string>
    <string name="newspaper">Газета</string>
    <string name="book">Книга</string>
    <string name="disk">Диск</string>
    <string name="object_type">Название:</string>
    <string name="save">Сохранить</string>
    <string name="back">Назад</string>
    <string name="ID">ID объекта</string>
    <string name="Access">Достпуность:</string>
    <string name="Author">Автор</string>
    <string name="Pages">Количество страниц:</string>
    <string name="DiskType">Тип диска:</string>
    <string name="Month">Месяц выпуска</string>
    <string name="ReleaseNumber">Номер релиза</string>
    <string name="Retry">Потворить попытку</string>
    <string name="Sort_by_name">По названию</string>
    <string name="Sort_by_data">По дате</string>
</resources>